# Rust_Http_Request

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/http_sample_backend/: Cargo.toml
src/http_sample_backend/src/: bootstrap.rs  http.rs  lib.rs
src/http_sample_frontend/src/: index.html  index.js
