[package]
name = "http_sample_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
serde = "1.0.178"
crc32fast = "1.3.2"
ic-types = "0.7"
serde_json = "^1.0.114"
mime = "^0.3.17"
validator = { version = "^0.17", features = ["derive"] }
serde-aux = "^4.5.0"
serde_bytes = "^0.11.14"
ructe = { version = "^0.17.0", features = ["mime03"] }
matchit = "^0.8.0"
dyn-clone = "^1.0.17"
tokio.workspace = { version = "^1.36.0", features = ["full"] }